--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Hello, Madison!</h1>
+<h2>Articles</h2>
 
 <!--This is a mix of HTML and ERB, embedded Ruby template syntax.  Note that
 comments in erb files follow standard HTML/CSS arrow commenting
@@ -18,3 +19,5 @@ Note the similarity to JQuery
     </li>
   <% end %>
 </ul>
+
+<%= link_to "New Article", new_article_path %>
